--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,16 @@
-
+#preLoader {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 98;
+	background-color: #595494;
+}
 
 
 
 /*===================== TABLE OF CONTENT =======================
 1.	3 Homepages
-2.  Fonts 
+2.  Fonts
 3.  Reset Css
 4.  Cross Browser Compatibility
 5.  Header
@@ -34,13 +40,13 @@
 
 
 
-/* ================================================================================== 
+/* ==================================================================================
 								Fonts
 ===================================================================================== */
 
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i');
 
-/* ================================================================================== 
+/* ==================================================================================
 										Reset Css
 ===================================================================================== */
 
@@ -53,8 +59,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -65,7 +71,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -263,7 +269,7 @@ nav ul li:hover > ul {
 header {
 	float: left;
 	width: 100%;
-	background-color: #e44d3a;
+	background-color: #595494;
 }
 .header-data {
 	float: left;
@@ -294,12 +300,12 @@ header {
 .ask-question {
 	background-color: #fff;
 	padding: 10px 25px;
-	color: #e44d3a !important;
+	color: #595494 !important;
 	font-size: 14px;
 	font-weight: 600;
 }
 .ask-question:hover {
-	color: #e44d3a;
+	color: #595494;
 }
 
 .forum-bar ul li {
@@ -377,7 +383,7 @@ header {
 	border: 0;
 }
 .search-bar form button i {
-	color: #e44d3a;
+	color: #595494;
 	font-size: 20px;
 	font-weight: bold;
 }
@@ -404,9 +410,9 @@ nav ul ul {
 	top: 100%;
 	left: 0;
 	width: 200px;
-	background-color: #e44d3a;
+	background-color: #595494;
 	text-align: left;
-	padding: 20px 0 10px 0; 
+	padding: 20px 0 10px 0;
 	opacity: 0;
 	visibility: hidden;
 }
@@ -503,7 +509,7 @@ nav ul ul li a {
 	text-transform: capitalize;
 	font-weight: 600;
 	text-align: center;
-	background-color: #e44d3a;
+	background-color: #595494;
 	padding: 18px 0;
 }
 nav ul li span {
@@ -524,8 +530,8 @@ nav > ul > li > a:hover {
 .user-account {
 	float: right;
 	width: 110px;
-	border-left: 1px solid #dd3e2b;
-	border-right: 1px solid #dd3e2b;
+	border-left: 1px solid #090723;
+	border-right: 1px solid #090723;
 	box-sizing: border-box;
 	position: relative;
 }
@@ -612,7 +618,7 @@ nav > ul > li > a:hover {
 .search_form form button {
 	color: #f2f2f2;
 	font-size: 14px;
-	background-color: #e44d3a;
+	background-color: #595494;
 	padding: 0 10px;
 	height: 100%;
 	position: absolute;
@@ -723,7 +729,7 @@ main {
 .username-dt {
 	float: left;
 	width: 100%;
-	background-color: #e44d3a;
+	background-color: #595494;
 	padding-top: 40px;
 }
 .user-data {
@@ -796,9 +802,9 @@ main {
 	font-size: 20px;
 }
 .user-fw-status li a {
-	color: #e44d3a;
+	color: #595494;
 	font-size: 14px;
-	font-weight: 600;	
+	font-weight: 600;
 }
 
 /* ============= Suggestions ============ */
@@ -865,13 +871,13 @@ main {
 	width: 30px;
 	height: 30px;
 	border: 1px solid #e5e5e5;
-	text-align: center;	
+	text-align: center;
 	line-height: 30px;
 	font-weight: 700;
 	cursor: pointer;
 }
 .suggestion-usd > span i:hover {
-	background-color: #e44d3a;
+	background-color: #595494;
 	color: #fff;
 }
 .view-more {
@@ -881,12 +887,12 @@ main {
 	padding-top: 10px;
 }
 .view-more > a {
-	color: #e44d3a;
+	color: #595494;
 	font-size: 14px;
 	font-weight: 700;
 }
 .view-more > a:hover {
-	color: #e44d3a
+	color: #595494
 }
 
 
@@ -920,7 +926,7 @@ main {
 	font-weight: 500;
 }
 .tags-sec ul li a:hover {
-	color: #e44d3a;
+	color: #595494;
 }
 .cp-sec {
 	float: left;
@@ -961,7 +967,7 @@ main {
 	width: 100%;
 	padding: 23px 20px;
 	background-color: #fff;
-	border-top: 4px solid #e44d3a;
+	border-top: 4px solid #595494;
 	border-left: 1px solid #e4e4e4;
 	border-bottom: 1px solid #e4e4e4;
 	border-right: 1px solid #e4e4e4;
@@ -1003,7 +1009,7 @@ main {
 }
 .post-st ul li a:hover,
 .post-st ul li a.active {
-	background-color: #e44d3a;
+	background-color: #595494;
 	color: #fff;
 }
 
@@ -1085,7 +1091,7 @@ main {
 	font-weight: 600;
 }
 .ed-opts > a:hover {
-	color: #e44d3a;
+	color: #595494;
 }
 .usy-name {
 	float: left;
@@ -1156,7 +1162,7 @@ main {
 	line-height: 30px;
 }
 .bk-links li i.la-envelope {
-	background-color: #e44d3a;
+	background-color: #595494;
 }
 .bid_now {
 	color: #fff;
@@ -1170,7 +1176,7 @@ main {
 	top: -3px;
 }
 .bid_now:hover {
-	color: #fff;	
+	color: #fff;
 }
 
 
@@ -1223,7 +1229,7 @@ main {
 	margin-bottom: 20px;
 }
 .job_descp > p a {
-	color: #e44d3a;
+	color: #595494;
 	font-weight: 600;
 }
 
@@ -1274,10 +1280,10 @@ main {
 	margin-right: 5px;
 }
 .like-com li a:hover {
-	color: #e44d3a;
+	color: #595494;
 }
 .like-com li a.active {
-	color: #e44d3a;
+	color: #595494;
 }
 .like-com li a i {
 	margin-right: 2px;
@@ -1290,7 +1296,7 @@ main {
 	font-size: 13px;
 	width: 30px;
 	height: 30px;
-	background-color: #e44d3a;
+	background-color: #595494;
 	line-height: 30px;
 	-webkit-border-radius: 30px;
 	-moz-border-radius: 30px;
@@ -1422,7 +1428,7 @@ main {
 	background-color: #53d690;
 }
 .envlp {
-	background-color: #e44d3a;
+	background-color: #595494;
 }
 .envlp img {
 	float: none;
@@ -1441,7 +1447,7 @@ main {
 	font-weight: 600;
 }
 .user-profy > a:hover {
-	background-color: #e44d3a;
+	background-color: #595494;
 	color: #fff;
 }
 .slick-slide img {
@@ -1478,7 +1484,7 @@ main {
 	margin-left: -2px;
 }
 .slick-nexti:before {
-	right: -14px;	
+	right: -14px;
 	content: '\f105';
 	padding-left: 3px;
 }
@@ -1509,7 +1515,7 @@ main {
 }
 .slick-previous:hover:before,
 .slick-nexti:hover:before {
-	background-color: #e44d3a;
+	background-color: #595494;
 	color: #fff;
 	border-color: transparent;
 }
@@ -1612,7 +1618,7 @@ main {
 }
 .comment > a.active,
 .comment > a:hover {
-	color: #e44d3a;
+	color: #595494;
 }
 .comment > a i {
 	font-weight: 600;
@@ -1648,7 +1654,7 @@ main {
 .comment_box form button {
 	float: right;
 	color: #fff;
-	background-color: #e44d3a;
+	background-color: #595494;
 	height: 40px;
 	padding: 0 10px;
 	text-align: center;
@@ -1729,12 +1735,12 @@ main {
 }
 .sign_link > a {
 	display: inline-block;
-	color: #e44d3a;
+	color: #595494;
 	font-size: 14px;
 	font-weight: 500;
 }
 .sign_link > a:hover {
-	color: #e44d3a;
+	color: #595494;
 }
 
 /* ============== Widget Jobs ============ */
@@ -1823,7 +1829,7 @@ main {
 .post-project h3 {
 	float: left;
 	width: 100%;
-	background-color: #e44d3a;
+	background-color: #595494;
 	color: #fff;
 	text-align: center;
 	font-size: 18px;
@@ -1872,7 +1878,7 @@ main {
 	margin-right: 15px;
 }
 .post-project-fields form ul li button.active {
-	background-color: #e44d3a;
+	background-color: #595494;
 	color: #fff;
 }
 .post-project-fields form ul li button,
@@ -1888,9 +1894,9 @@ main {
 }
 .post-project-fields form ul li button:hover,
 .post-project-fields form ul li a:hover {
-	background-color: #e44d3a;
+	background-color: #595494;
 	color: #fff;
-} 
+}
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   color: #b2b2b2;
 }
@@ -2120,7 +2126,7 @@ select {
 	border-radius: 0 4px 4px 0;
 }
 .sign-control li.current a {
-	background-color: #e44d3a;
+	background-color: #595494;
 	color: #fff;
 }
 .sign_in_sec {
@@ -2148,7 +2154,7 @@ select {
 	left: 0;
 	width: 30px;
 	height: 2px;
-	background-color: #e44d3a;
+	background-color: #595494;
 }
 
 
@@ -2213,7 +2219,7 @@ select {
 .sign_in_sec form button {
 	color: #ffffff;
 	font-size: 16px;
-	background-color: #e44d3a;
+	background-color: #595494;
 	padding: 12px 27px;
 	border:0;
 	font-weight: 500;
@@ -2238,7 +2244,7 @@ select {
 }
 .fgt-sec input[type="checkbox"] {
 	display: none;
-} 
+}
 .fgt-sec label {
 	float: left;
 }
@@ -2267,7 +2273,7 @@ select {
 	color: #ffffff;
 	opacity: 0;
 	visibility: hidden;
-	background-color: #e44d3a;
+	background-color: #595494;
 	position: absolute;
 	font-family: fontawesome;
 	top: 49%;
@@ -2301,7 +2307,7 @@ select {
 
 .fgt-sec input[type="radio"] {
 	display: none;
-} 
+}
 .fgt-sec label {
 	float: left;
 }
@@ -2330,7 +2336,7 @@ select {
 	color: #ffffff;
 	opacity: 0;
 	visibility: hidden;
-	background-color: #e44d3a;
+	background-color: #595494;
 	position: absolute;
 	font-family: fontawesome;
 	top: 49%;
@@ -2377,7 +2383,7 @@ select {
 }
 .signup-tab ul li {
 	display: inline-block;
-	margin-right: -4px;	
+	margin-right: -4px;
 }
 .signup-tab ul li a {
 	color: #000000;
@@ -2393,7 +2399,7 @@ select {
 	display: inline-block;
 }
 .signup-tab ul li.current a {
-	background-color: #e44d3a;
+	background-color: #595494;
 	color: #fff;
 }
 .signup-tab ul li:last-child a {
@@ -2517,10 +2523,10 @@ footer {
 }
 .cover-sec > a {
 	display: inline-block;
-	color: #e44d3a;
+	color: #595494;
 	font-size: 16px;
 	background-color: #fff;
-	border: 1px solid #e44d3a;
+	border: 1px solid #595494;
 	position: absolute;
 	top: 30px;
 	right: 0;
@@ -2560,7 +2566,7 @@ footer {
 	border-radius: 100px;
 	color: #fff;
 	line-height: 40px;
-	background-color: #e44d3a;
+	background-color: #595494;
 	position: absolute;
 	top: 0;
 	left: 60%;
@@ -2760,7 +2766,7 @@ footer {
 	filter: grayscale(0);
 }
 .tab-feed ul li.active span {
-	color: #e44d3a;
+	color: #595494;
 }
 .tab-feed ul li img {
 	float: none;
@@ -2789,7 +2795,7 @@ footer {
 	display: inline-block;
 	color: #ffffff;
 	font-size: 16px;
-	background-color: #e44d3a;
+	background-color: #595494;
 	padding: 12px;
 }
 .message-btn a:hover {
@@ -2840,7 +2846,7 @@ footer {
 	transform: scale(1.2);
 }
 .pf-gallery img {
-	width: 100%;	
+	width: 100%;
 }
 
 .product-feed-tab {
@@ -3065,7 +3071,7 @@ footer {
 	font-weight: 600;
 	float: left;
 	width: 100%;
-	margin-bottom: 25px;	
+	margin-bottom: 25px;
 }
 .overview-edit span {
 	color: #b2b2b2;
@@ -3102,7 +3108,7 @@ footer {
 	padding: 15px;
 }
 .save {
-	background-color: #e44d3a;
+	background-color: #595494;
 	color: #fff;
 	border-color: transparent;
 }
@@ -3234,7 +3240,7 @@ a:hover {
 	border-left: 1px solid #e4e4e4;
 	border-right: 1px solid #e4e4e4;
 	border-bottom: 1px solid #e4e4e4;
-	margin-bottom: 20px;	
+	margin-bottom: 20px;
 }
 .billing-method ul {
 	float: left;
@@ -3263,7 +3269,7 @@ a:hover {
 }
 .billing-method ul li i {
 	font-size: 13px;
-	color: #e44d3a;
+	color: #595494;
 }
 .lt-sec {
 	float: left;
@@ -3285,7 +3291,7 @@ a:hover {
 	display: inline-block;
 	color: #ffffff;
 	font-size: 16px;
-	background-color: #e44d3a;
+	background-color: #595494;
 	padding: 10px 25px;
 }
 
@@ -3380,7 +3386,7 @@ a:hover {
 	left: 24px;
 	width: 7px;
 	height: 7px;
-	background-color: #e44d3a;
+	background-color: #595494;
 	-webkit-border-radius: 100px;
 	-moz-border-radius: 100px;
 	-ms-border-radius: 100px;
@@ -3397,7 +3403,7 @@ a:hover {
 .payment_methods form button {
 	color: #ffffff;
 	font-size: 16px;
-	background-color: #e44d3a;
+	background-color: #595494;
 	padding: 10px 15px;
 	border: 0;
 	cursor: pointer;
@@ -3539,7 +3545,7 @@ a:hover {
 	background-color: #53d690;
 }
 .message-us {
-	background-color: #e44d3a;
+	background-color: #595494;
 }
 .hire-us {
 	background-color: #51a5fb;
@@ -3588,7 +3594,7 @@ a:hover {
 	position: absolute;
 	top: 0;
 	right: 0;
-	background-color: #e44d3a;
+	background-color: #595494;
 	color: #ffffff;
 	font-size: 16px;
 	font-weight: 500;
@@ -3727,7 +3733,7 @@ a:hover {
 	-ms-border-radius: 100px;
 	-o-border-radius: 100px;
 	border-radius: 100px;
-	background-color: #e44d3a;
+	background-color: #595494;
 	top: 3px;
 	left: 3px;
 }
@@ -3771,8 +3777,8 @@ a:hover {
 	-ms-border-radius: 100px;
 	-o-border-radius: 100px;
 	border-radius: 100px;
-	background-color: #e44d3a;
-	border: 2px solid #e3e3e3;	
+	background-color: #595494;
+	border: 2px solid #e3e3e3;
 	-webkit-box-shadow: 1px 2px 3px rgba(0,0,0,0.43);
 	-moz-box-shadow: 1px 2px 3px rgba(0,0,0,0.43);
 	-ms-box-shadow: 1px 2px 3px rgba(0,0,0,0.43);
@@ -3816,7 +3822,7 @@ a:hover {
 }
 .rg-limit h4 {
 	color: #686868;
-	font-size: 15px;	
+	font-size: 15px;
 	font-weight: 600;
 	float: left;
 }
@@ -3857,7 +3863,7 @@ a:hover {
 	right: 10px;
 	width: 20px;
 	height: 20px;
-	background-color: #e44d3a;
+	background-color: #595494;
 	text-align: center;
 	font-size: 12px;
 	color: #fff;
@@ -3911,7 +3917,7 @@ a:hover {
 .con-title {
 	float: left;
 	width: 100%;
-	background-color: #e44d3a;
+	background-color: #595494;
 	padding: 15px 25px;
 	-webkit-border-radius: 10px 10px 0 0;
 	-moz-border-radius: 10px 10px 0 0;
@@ -3981,7 +3987,7 @@ a:hover {
 	right: 0;
 }
 .activee {
-	background-color: #e44d3a;
+	background-color: #595494;
 }
 .usy-info {
 	display: table-cell;
@@ -4038,7 +4044,7 @@ a:hover {
 .chat-msg p {
 	color: #ffffff;
 	font-size: 14px;
-	background-color: #e44d3a;
+	background-color: #595494;
 	line-height: 18px;
 	-webkit-border-radius: 15px;
 	-moz-border-radius: 15px;
@@ -4140,7 +4146,7 @@ a:hover {
 	resize: none;
 }
 .typing-msg form button {
-	color: #e44d3a;
+	color: #595494;
 	font-size: 18px;
 	font-weight: 600;
 	position: absolute;
@@ -4247,7 +4253,7 @@ a:hover {
 }
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
 	background-color: inherit;
-	color: #e44d3a;
+	color: #595494;
 	border-color: inherit;
 }
 
@@ -4333,7 +4339,7 @@ a:hover {
 	cursor: pointer;
 }
 .save-stngs ul li button:hover {
-	background-color: #e44d3a;
+	background-color: #595494;
 	color: #fff;
 	border-color: transparent;
 }
@@ -4373,7 +4379,7 @@ a:hover {
 }
 .cp-field textarea {
 	padding: 20px;
-	height: 115px;	
+	height: 115px;
 }
 .cpp-fiel i {
 	position: absolute;
@@ -4534,11 +4540,11 @@ a:hover {
 	padding-left: 15px;
 }
 .bx-info h3 {
-	color: #e44d3a;
+	color: #595494;
 	font-size: 20px;
 	font-weight: 600;
 	margin-bottom: 5px;
-}	
+}
 .bx-info h5 {
 	color: #000000;
 	font-size: 14px;
@@ -4661,7 +4667,7 @@ a:hover {
 	-ms-border-radius: 100px;
 	-o-border-radius: 100px;
 	border-radius: 100px;
-	background-color: #e44d3a;
+	background-color: #595494;
 	position: absolute;
 	top: -3px;
 	right: 0;
@@ -4826,7 +4832,7 @@ a:hover {
 .message-inner-dt > p {
 	float: right;
 	width: 60%;
-	background-color: #e44d3a;
+	background-color: #595494;
 	font-size: 14px;
 	line-height: 22px;
 	padding: 10px 35px 10px 35px;
@@ -4889,7 +4895,7 @@ a:hover {
 .mf-field button {
 	float: left;
 	width: 17%;
-	background-color: #e44d3a;
+	background-color: #595494;
 	height: 45px;
 	text-align: center;
 	color: #fff;
@@ -4934,10 +4940,10 @@ a:hover {
 	border-bottom: 2px solid transparent;
 }
 .forum-links ul li.active {
-	border-color:#e44d3a;
+	border-color:#595494;
 }
 .forum-links ul li.active a {
-	color: #e44d3a;	
+	color: #595494;
 }
 .forum-links ul li a {
 	display: inline-block;
@@ -5017,7 +5023,7 @@ a:hover {
 	font-weight: 600;
 }
 .react-links li a:hover {
-	color: #e44d3a;
+	color: #595494;
 }
 .react-links li a i {
 	padding-right: 10px;
@@ -5085,7 +5091,7 @@ a:hover {
 	color: #b2b2b2;
 }
 .pagination li .page-link.active {
-	background-color: #e44d3a;
+	background-color: #595494;
 	color: #fff;
 	border-color: transparent;
 }
@@ -5121,7 +5127,7 @@ a:hover {
 }
 .widget-user ul li .usr-ms-img {
 	width: 35px;
-} 
+}
 .widget-user ul li .usr-mg-info h3 {
 	font-size: 14px;
 }
@@ -5266,7 +5272,7 @@ a:hover {
 .post_comment_sec form button {
 	color: #ffffff;
 	font-size: 14px;
-	background-color: #e44d3a;
+	background-color: #595494;
 	padding: 10px 25px;
 	border: 0;
 	font-weight: 600;
@@ -5295,7 +5301,7 @@ a:hover {
 }
 .next-prev > a:hover {
 	color: #fff;
-	background-color: #e44d3a;
+	background-color: #595494;
 }
 .fl-left {
 	float: left;
@@ -5334,7 +5340,7 @@ a:hover {
 	color: #53d690;
 }
 .widget-feat ul li i.fa-comment {
-	color: #e44d3a;
+	color: #595494;
 }
 .widget-feat ul li i.fa-share-alt {
 	color: #51a5fb;
