--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,276 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+      <meta charset="UTF-8">
+      <title>{% block title %}{% endblock %} - TwittAdventure</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="" />
+      <meta name="keywords" content="" />
+      <link rel="stylesheet" type="text/css" href="{{asset('css/animate.css')}}">
+      <link rel="stylesheet" type="text/css" href="{{asset('css/bootstrap.min.css')}}">
+      <link rel="stylesheet" type="text/css" href="{{asset('css/line-awesome.css')}}">
+      <link rel="stylesheet" type="text/css" href="{{asset('css/line-awesome-font-awesome.min.css')}}">
+      <link rel="stylesheet" type="text/css" href="{{asset('css/font-awesome.min.css')}}">
+      <link rel="stylesheet" type="text/css" href="{{asset('css/jquery.mCustomScrollbar.min.css')}}">
+      <link rel="stylesheet" type="text/css" href="{{asset('lib/slick/slick.css')}}">
+      <link rel="stylesheet" type="text/css" href="{{asset('lib/slick/slick-theme.css')}}">
+      <link rel="stylesheet" type="text/css" href="{{asset('css/loader.css')}}">
+      <link rel="stylesheet" type="text/css" href="{{asset('css/style.css')}}">
+      <link rel="stylesheet" type="text/css" href="{{asset('css/responsive.css')}}">
+
+      <!-- CSS ERROR -->
+      <link rel="stylesheet" href="{{asset('css/error.css')}}">
+
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+
+      <div class="wrapper">
+
+        <!-- LOADER -->
+        <div id="preLoader"></div>
+        <div class="square first"></div>
+        <div class="square second"></div>
+        <div class="square third"></div>
+
+        <!-- ERROR -->
+        <div class="cont-error">
+        	<h1 class="error d-none"></h1>
+        </div>
+
+
+
+        {% block header %}
+    		<header>
+    			<div class="container">
+    				<div class="header-data">
+    					<div class="logo">
+    						<a href="index.html" title=""><img src="{{asset('images/logo.png')}}" alt=""></a>
+    					</div><!--logo end-->
+    					<div class="search-bar">
+    						<form>
+    							<input type="text" name="search" placeholder="Search...">
+    							<button type="submit"><i class="la la-search"></i></button>
+    						</form>
+    					</div><!--search-bar end-->
+    					<nav>
+    						<ul>
+    							<li>
+    								<a href="index.html" title="">
+    									<span><img src="{{asset('images/icon1.png')}}" alt=""></span>
+    									Home
+    								</a>
+    							</li>
+    							<li>
+    								<a href="companies.html" title="">
+    									<span><img src="{{asset('images/icon2.png')}}" alt=""></span>
+    									Companies
+    								</a>
+    							</li>
+    							<li>
+    								<a href="projects.html" title="">
+    									<span><img src="{{asset('images/icon3.png')}}" alt=""></span>
+    									Projects
+    								</a>
+    							</li>
+    							<li>
+    								<a href="profiles.html" title="">
+    									<span><img src="{{asset('images/icon4.png')}}" alt=""></span>
+    									Profiles
+    								</a>
+    								<ul>
+    									<li><a href="user-profile.html" title="">User Profile</a></li>
+    									<li><a href="my-profile-feed.html" title="">my-profile-feed</a></li>
+    								</ul>
+    							</li>
+    							<li>
+    								<a href="jobs.html" title="">
+    									<span><img src="{{asset('images/icon5.png')}}" alt=""></span>
+    									Jobs
+    								</a>
+    							</li>
+    							<li>
+    								<a href="#" title="" class="not-box-open">
+    									<span><img src="{{asset('images/icon6.png')}}" alt=""></span>
+    									Messages
+    								</a>
+    								<div class="notification-box msg">
+    									<div class="nt-title">
+    										<h4>Setting</h4>
+    										<a href="#" title="">Clear all</a>
+    									</div>
+    									<div class="nott-list">
+    										<div class="notfication-details">
+    							  				<div class="noty-user-img">
+    							  					<img src="{{asset('images/resources/ny-img1.png')}}" alt="">
+    							  				</div>
+    							  				<div class="notification-info">
+    							  					<h3><a href="messages.html" title="">Jassica William</a> </h3>
+    							  					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+    							  					<span>2 min ago</span>
+    							  				</div><!--notification-info -->
+    						  				</div>
+    						  				<div class="notfication-details">
+    							  				<div class="noty-user-img">
+    							  					<img src="{{asset('images/resources/ny-img2.png')}}" alt="">
+    							  				</div>
+    							  				<div class="notification-info">
+    							  					<h3><a href="messages.html" title="">Jassica William</a></h3>
+    							  					<p>Lorem ipsum dolor sit amet.</p>
+    							  					<span>2 min ago</span>
+    							  				</div><!--notification-info -->
+    						  				</div>
+    						  				<div class="notfication-details">
+    							  				<div class="noty-user-img">
+    							  					<img src="{{asset('images/resources/ny-img3.png')}}" alt="">
+    							  				</div>
+    							  				<div class="notification-info">
+    							  					<h3><a href="messages.html" title="">Jassica William</a></h3>
+    							  					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempo incididunt ut labore et dolore magna aliqua.</p>
+    							  					<span>2 min ago</span>
+    							  				</div><!--notification-info -->
+    						  				</div>
+    						  				<div class="view-all-nots">
+    						  					<a href="messages.html" title="">View All Messsages</a>
+    						  				</div>
+    									</div><!--nott-list end-->
+    								</div><!--notification-box end-->
+    							</li>
+    							<li>
+    								<a href="#" title="" class="not-box-open">
+    									<span><img src="{{asset('images/icon7.png')}}" alt=""></span>
+    									Notification
+    								</a>
+    								<div class="notification-box">
+    									<div class="nt-title">
+    										<h4>Setting</h4>
+    										<a href="#" title="">Clear all</a>
+    									</div>
+    									<div class="nott-list">
+    										<div class="notfication-details">
+    							  				<div class="noty-user-img">
+    							  					<img src="{{asset('images/resources/ny-img1.png')}}" alt="">
+    							  				</div>
+    							  				<div class="notification-info">
+    							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
+    							  					<span>2 min ago</span>
+    							  				</div><!--notification-info -->
+    						  				</div>
+    						  				<div class="notfication-details">
+    							  				<div class="noty-user-img">
+    							  					<img src="{{asset('images/resources/ny-img2.png')}}" alt="">
+    							  				</div>
+    							  				<div class="notification-info">
+    							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
+    							  					<span>2 min ago</span>
+    							  				</div><!--notification-info -->
+    						  				</div>
+    						  				<div class="notfication-details">
+    							  				<div class="noty-user-img">
+    							  					<img src="{{asset('images/resources/ny-img3.png')}}" alt="">
+    							  				</div>
+    							  				<div class="notification-info">
+    							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
+    							  					<span>2 min ago</span>
+    							  				</div><!--notification-info -->
+    						  				</div>
+    						  				<div class="notfication-details">
+    							  				<div class="noty-user-img">
+    							  					<img src="{{asset('images/resources/ny-img2.png')}}" alt="">
+    							  				</div>
+    							  				<div class="notification-info">
+    							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
+    							  					<span>2 min ago</span>
+    							  				</div><!--notification-info -->
+    						  				</div>
+    						  				<div class="view-all-nots">
+    						  					<a href="#" title="">View All Notification</a>
+    						  				</div>
+    									</div><!--nott-list end-->
+    								</div><!--notification-box end-->
+    							</li>
+    						</ul>
+    					</nav><!--nav end-->
+    					<div class="menu-btn">
+    						<a href="#" title=""><i class="fa fa-bars"></i></a>
+    					</div><!--menu-btn end-->
+    					<div class="user-account">
+    						<div class="user-info">
+    							<img src="{{asset('images/resources/user.png')}}" alt="">
+    							<a href="#" title="">John</a>
+    							<i class="la la-sort-down"></i>
+    						</div>
+    						<div class="user-account-settingss">
+    							<h3>Online Status</h3>
+    							<ul class="on-off-status">
+    								<li>
+    									<div class="fgt-sec">
+    										<input type="radio" name="cc" id="c5">
+    										<label for="c5">
+    											<span></span>
+    										</label>
+    										<small>Online</small>
+    									</div>
+    								</li>
+    								<li>
+    									<div class="fgt-sec">
+    										<input type="radio" name="cc" id="c6">
+    										<label for="c6">
+    											<span></span>
+    										</label>
+    										<small>Offline</small>
+    									</div>
+    								</li>
+    							</ul>
+    							<h3>Custom Status</h3>
+    							<div class="search_form">
+    								<form>
+    									<input type="text" name="search">
+    									<button type="submit">Ok</button>
+    								</form>
+    							</div><!--search_form end-->
+    							<h3>Setting</h3>
+    							<ul class="us-links">
+    								<li><a href="profile-account-setting.html" title="">Account Setting</a></li>
+    								<li><a href="#" title="">Privacy</a></li>
+    								<li><a href="#" title="">Faqs</a></li>
+    								<li><a href="#" title="">Terms & Conditions</a></li>
+    							</ul>
+    							<h3 class="tc"><a href="#" title="">Logout</a></h3>
+    						</div><!--user-account-settingss end-->
+    					</div>
+    				</div><!--header-data end-->
+    			</div>
+    		</header>
+        {% endblock %}
+
+        <!-- MAIN -->
         {% block body %}{% endblock %}
+
+      </div><!--theme-layout end "WRAPPER""-->
+
+        <script type="text/javascript" src="{{asset('js/jquery.min.js')}}"></script>
+        <script type="text/javascript" src="{{asset('js/popper.js')}}"></script>
+        <script type="text/javascript" src="{{asset('js/bootstrap.min.js')}}"></script>
+        <script type="text/javascript" src="{{asset('js/jquery.mCustomScrollbar.js')}}"></script>
+        <script type="text/javascript" src="{{asset('lib/slick/slick.min.js')}}"></script>
+        <script type="text/javascript" src="{{asset('js/scrollbar.js')}}"></script>
+        <script type="text/javascript" src="{{asset('js/loader.js')}}"></script>
+        <script type="text/javascript" src="{{asset('js/script.js')}}"></script>
+
+        <!-- IF ERROR -->
+        {% if error is defined %}
+        <script type="text/javascript">
+          var errorString = "{{error}}";
+          $(window).on('load', function() {
+            function anime() {
+              $('.error').removeClass("d-none").addClass("animate").html(errorString);
+            };
+            setTimeout(anime, 1500);
+          });
+        </script>
+        {% endif %}
+
         {% block javascripts %}{% endblock %}
     </body>
 </html>
